added minimal changes

--- a/index.html
+++ b/index.html
@@ -181,303 +181,32 @@
           margin-bottom: 20px;
         "
       >
-        <h3>Available Models & Performance:</h3>
-        <div style="overflow-x: auto">
-          <table
-            style="width: 100%; border-collapse: collapse; margin-top: 10px"
-          >
-            <thead>
-              <tr style="background: #f5f5f5">
-                <th
-                  style="padding: 8px; border: 1px solid #ddd; text-align: left"
-                >
-                  Model
-                </th>
-                <th
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Size
-                </th>
-                <th
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Speed
-                </th>
-                <th
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Quality
-                </th>
-                <th
-                  style="padding: 8px; border: 1px solid #ddd; text-align: left"
-                >
-                  Best For
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  <strong>tiny.en</strong>
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  75 MB
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Fast
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Basic
-                </td>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  Quick tests, English only
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  <strong>base.en</strong>
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  142 MB
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Good
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Good
-                </td>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  Good balance, English only
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  <strong>small.en</strong>
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  466 MB
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Slow
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  High
-                </td>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  High accuracy, English only
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  <strong>base (multilingual)</strong>
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  142 MB
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Good
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Good
-                </td>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  99+ languages supported
-                </td>
-              </tr>
-              <tr>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  <strong>large (multilingual)</strong>
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  1030 MB
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Slowest
-                </td>
-                <td
-                  style="
-                    padding: 8px;
-                    border: 1px solid #ddd;
-                    text-align: center;
-                  "
-                >
-                  Best
-                </td>
-                <td style="padding: 8px; border: 1px solid #ddd">
-                  Best quality, all languages
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <p style="margin-top: 10px; font-size: 14px; color: #666">
-          <em
-            >Recommendation: Start with <strong>base.en</strong> for English or
-            <strong>base</strong> for other languages.</em
-          >
-        </p>
-      </div>
-
-      <div
-        style="
-          background: #f5f5f5;
-          padding: 15px;
-          border-radius: 8px;
-          margin-bottom: 20px;
-        "
-      >
-        <h3>Supported Audio Formats:</h3>
-        <div
-          style="
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 10px;
-          "
-        >
-          <span><strong>WAV</strong> (.wav)</span>
-          <span><strong>MP3</strong> (.mp3)</span>
-          <span><strong>FLAC</strong> (.flac)</span>
-          <span><strong>M4A</strong> (.m4a)</span>
-          <span><strong>AAC</strong> (.aac)</span>
-          <span><strong>OGG</strong> (.ogg)</span>
-          <span><strong>WMA</strong> (.wma)</span>
-          <span><strong>WEBM</strong> (.webm)</span>
-        </div>
-        <p style="margin-top: 10px; font-size: 12px; color: #666">
-          <em>Note: Files are processed locally in your browser for privacy</em>
-        </p>
-      </div>
-
-      <div
-        style="
-          background: #fff5ee;
-          padding: 15px;
-          border-radius: 8px;
-          margin-bottom: 20px;
-        "
-      >
-        <h3>Available AI Models:</h3>
+        <h3>Available AI Models & Their Performances:</h3>
         <table style="width: 100%; border-collapse: collapse">
           <thead>
-            <tr style="background: #f0f0f0">
+            <tr style="background: #f5f5f5">
               <th
-                style="padding: 8px; border: 1px solid #ddd; text-align: left"
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
               >
                 Model
               </th>
               <th
-                style="padding: 8px; border: 1px solid #ddd; text-align: left"
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
               >
                 Size
               </th>
               <th
-                style="padding: 8px; border: 1px solid #ddd; text-align: left"
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
               >
                 Speed
               </th>
               <th
-                style="padding: 8px; border: 1px solid #ddd; text-align: left"
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
               >
                 Quality
               </th>
               <th
-                style="padding: 8px; border: 1px solid #ddd; text-align: left"
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
               >
                 Best For
               </th>
@@ -485,52 +214,170 @@
           </thead>
           <tbody>
             <tr>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 <strong>tiny.en</strong>
               </td>
-              <td style="padding: 8px; border: 1px solid #ddd">75 MB</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Fastest</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Basic</td>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                75 MB
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Fastest
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Basic
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 Quick testing, clear speech
               </td>
             </tr>
             <tr>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 <strong>base.en</strong>
               </td>
-              <td style="padding: 8px; border: 1px solid #ddd">142 MB</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Fast</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Good</td>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                142 MB
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Fast
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Good
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 General use, good balance
               </td>
             </tr>
             <tr>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 <strong>small.en</strong>
               </td>
-              <td style="padding: 8px; border: 1px solid #ddd">466 MB</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Moderate</td>
-              <td style="padding: 8px; border: 1px solid #ddd">High</td>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                466 MB
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Moderate
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                High
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 Professional transcription
               </td>
             </tr>
             <tr>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 <strong>medium/large</strong>
               </td>
-              <td style="padding: 8px; border: 1px solid #ddd">515MB+</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Slow</td>
-              <td style="padding: 8px; border: 1px solid #ddd">Best</td>
-              <td style="padding: 8px; border: 1px solid #ddd">
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                515MB+
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Slow
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Best
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
                 Highest accuracy needed
+              </td>
+            </tr>
+            <tr>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                <strong>base (multilingual)</strong>
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                142 MB
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Good
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Good
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                99+ languages supported
+              </td>
+            </tr>
+            <tr>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                <strong>large (multilingual)</strong>
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                1030 MB
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Slowest
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Best
+              </td>
+              <td
+                style="padding: 8px; border: 1px solid #ddd; text-align: center"
+              >
+                Best quality, all languages
               </td>
             </tr>
           </tbody>
         </table>
-        <p style="margin-top: 10px; font-size: 12px; color: #666">
+        <p style="margin-top: 10px; font-size: 14px; color: #666">
           <em
             >Recommendation: Start with <strong>base.en</strong> for best
             speed/quality balance</em
@@ -662,7 +509,7 @@
           style="margin: 10px 0"
         />
         <br />
-        <small style="color: #666">
+        <small style="color: #666; font-size: 14px">
           <em
             >Supports: WAV, MP3, FLAC, M4A, AAC, OGG, WMA, WEBM | Max
             recommended: 100MB | Max length: ~30 minutes</em
